css/main.css
/* ... */
.main-cta .natural-img {
    width: 100%;
    max-width: 433px;
}

.available-store-img {
    width: 128px;
    height: 60px;
    align-self: baseline;
    margin-left: 40px;
    margin-top: 36px;
}

.special-offer {
    margin-top: 40px;
    position: relative;
}

.special-offer .sub-hero-img {
    display: none;
}

.mobile-cta {
    display: none;
}

.mobile-special-offer-img {
    display: none;
}

@media (max-width: 940px) {
    .main-hero {
        flex-direction: column;
    }
    .main-cta {
        left: 0 !important;
        order: 0;
    }
    .main-cta.desktop {
        display: none;
    }
    .available-store-img.mobile {
        display: block;
    }
    .mobile-cta {
        width: 100%;
        overflow: hidden;
        display: flex;
        margin-top: 50px;
        background: center bottom / cover no-repeat url(../img/ptl-coconut-bg.png);
        flex-direction: column;
        align-items: center;
        justify-content: center;
        padding-bottom: 25px;
    }
    .mobile-special-offer-img {
        display: initial;
        position: relative;
        left: 80px;
        bottom: 8px;
    }
    .mobile-cta .cta-button {
        position: relative;
        top: 25px;
    }
    .mobile-cta .natural-img {
        padding-top: 30px;
        width: 100%;
        max-width: 346px;
    }
    .special-offer {
        order: -1;
    }
    .special-offer .desktop-sub-hero-img {
        display: none;
    }
    .special-offer .sub-hero-img {
        display: block;
        width: 135%;
        max-width: 550px;
        position: relative;
        right: 80px;
    }
    .available-store-img {
        display: none;
    }
    .main-facts {
        margin-top: -27px !important;
    }
    .main-facts .cta-button {
        display: block;
    }
    .main-facts .available-store-img {
        margin: 0 auto;
        margin-top: 30px;
    }
}

@media (min-width: 485px) {
    .mobile-special-offer-img {
        left: 200px !important;
        bottom: 0 !important;
    }
}

@media (max-width: 1200px) {
    .main-cta {
        margin-top: 50px;
        left: 130px;
    }
    .special-offer .desktop-sub-hero-img {
        height: 500px;
        width: auto;
    }
    .main-cta .natural-img {
        width: 100%;
        max-width: 330px;
    }
    .feature-list {
        max-width: 396px;
    }
}

.main-hero {
    background: center bottom / cover no-repeat url("../img/top-bg.png");
}

.main-hero .top-bg {
    position: absolute;
    width: 100%;
    z-index: -1;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
}

.feature-list {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    padding-top: 30px;
    max-width: 412px;
}

.feature {
    display: flex;
    align-items: center;
    padding: 10px 0;
}

.feature .feature-img {
    height: 23px;
    width: auto;
}

.feature-img:first-child {
    padding-left: 12px;
}

.feature p:last-child {
    padding-right: 12px;
}

.feature p {
    color: white;
    text-transform: uppercase;
    margin: 0;
    font-family: veneerregular;
    position: relative;
    left: 3px;
    font-size: 18px;
    white-space: nowrap;
}

.feature-text {
    font-family: "Open Sans";
    font-weight: 400;
    font-size: 16px;
    color: white;
    text-align: center;
    line-height: 28px;
    max-width: 378px;
    width: 100%;
    margin: 0;
    padding: 0 15px 27px 15px;
}

.cta-button {
    max-width: 380px;
    width: 100%;
    height: 54px;
    border-radius: 3px;
    background-color: #ffcd04;
    color: #000;
    text-transform: uppercase;
    font-family: "montserratextrabold";
    font-size: 20px;
    font-weight: 400;
}

/* Main Facts */
.main-facts {
    display: flex;
    flex-direction: column;
    align-items: center;
    max-width: 997px;
    margin: 63px auto;
}

.main-facts .available-store-img {
    width: 100%;
    max-width: 175px;
    height: auto;
}

.main-facts .sub-title {
    color: #999999;
    font-family: "Open Sans";
    font-size: 14px;
    font-weight: 400;
    padding-top: 7px;
}

.main-facts .description {
    max-width: 495px;
    color: #222222;
    font-family: montserratbold;
    font-size: 30px;
    font-weight: 700;
    line-height: 45px;
    text-align: center;
    margin: 0;
    padding: 0 15px;
}

.carousel {
    padding-top: 54px;
    width: 90%;
    margin:0px auto;
}

.carousel .fact-container {
    height: 274px;
    background-color: #ffffff;
    display: flex;
    flex-direction: column;
    align-items: center;
    transition: .3s;
    cursor: pointer;
}

.carousel .fact-container:hover {
    box-shadow: 0 0 35px 15px rgba(34, 34, 34, 0.05);
    border-bottom: 3px solid #35baf1;
}

.carousel .fact-container img {
    margin-top: -18px;
    width: 144px;
    height: 133px;
    transition: .3s;
}

.carousel .fact-container:hover img {
    width: 188px;
    height: 176px;
}

.main-facts-desktop {
    display: none;
}
/* ... */

